--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="vendor/codemirror.min.css">
     <link rel="stylesheet" href="assets/blockly_style.css">
     <link rel="stylesheet" href="assets/cocoblockly.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.18.2/addon/lint/lint.min.css">
 
 
     <!-- Ardublockly - These three files contain the compress version -->
@@ -144,7 +145,7 @@
                     <input type="radio" name="edit-mode" value="Code" autocomplete="off">
                     <span>Code</span>
                   </label>
-                  <label id="btn-mode-xml" class="btn btn-default navbar-btn">
+                  <label style="display: none" id="btn-mode-xml" class="btn btn-default navbar-btn">
                     <input type="radio" name="edit-mode" value="XML" autocomplete="off">
                     <span>XML</span>
                   </label>
