add export file

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -122,6 +122,9 @@
                   </li>
                   <li role="separator" class="divider"></li>
                   <li>
+                    <a onClick="CocoBlockly.exportFile()" href="#">Export Code</a>
+                  </li>                  
+                  <li>
                     <a onClick="CocoBlockly.toggleSidebar();" href="#">Toggle Sidebar</a>
                   </li>
                <li>
