--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -132,7 +132,7 @@
                   </li>                  
                   <li role="separator" class="divider"></li>
                   <li>
-                    <a href="#">About</a>
+                    <a data-toggle="modal" data-backdrop="false" href="#cocoblock-about">About</a>
                   </li>
                   <li role="separator" class="divider"></li>
                   <li>
@@ -1034,6 +1034,32 @@ Sine wave instrument
           </div>
           
         <div class="modal-footer"><button type="button" class="btn btn-default" data-dismiss="modal">Close</button><button type="button" data-dismiss="modal" onClick="CocoBlockly.saveSettings()" class="btn btn-primary">Save changes</button></div></div>
+      </div>
+    </div>
+
+
+<div class="modal" id="cocoblock-about">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+            <h4 class="modal-title">About CocoBlock
+              <br>
+            </h4>
+          </div>
+          <div class="modal-body">
+                <p>A jugaad and low-cost educational platform for digital interactivity,
+                  compatible with Makey Makey (TM), using QTouch ADC and Attiny85
+                  <br>
+                  <a href="http://cocomake7.github.io">http://cocomake7.github.io</a>
+                  <br>
+                  <p>CocoBlock Ide 0.1 by Budi Prakosa based on ArduBlockly</p>
+                </p>
+          </div>
+          <div class="modal-footer">
+            <a class="btn btn-default" data-dismiss="modal">Close</a>
+          </div>
+        </div>
       </div>
     </div>
 
