--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -136,7 +136,7 @@
                   </li>
                   <li role="separator" class="divider"></li>
                   <li>
-                    <a href="#">Exit</a>
+                    <a onClick="CocoBlockly.quit()" href="#">Exit</a>
                   </li>                  
                 </ul>
               </li>
