fix xml toolbox

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -348,7 +348,7 @@
             addJsScriptTag(updated.content)
             break;
           case 'xmltoolbox':
-            addXMLScriptTag(file.name, updated.content)
+            CocoBlockly.toolboxStr = updated.content
             break;                        
           default:
             break;
