--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -61,8 +61,8 @@
     <script type="text/javascript" src="vendor/jquery.min.js"></script>
     <script type="text/javascript" src="vendor/bootstrap.min.js"></script>
     <script type="text/javascript" src="vendor/bootstrap-notify.min.js"></script>
-    <script src="http://cdn.jsdelivr.net/alertifyjs/1.8.0/alertify.min.js"></script>
 
+    <script type="text/javascript" src="vendor/alertify/alertify.min.js"></script>
     <link rel="stylesheet" href="vendor/alertify/alertify.min.css"/>    
     <link rel="stylesheet" href="vendor/alertify/default.min.css"/>
 
