--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -10,14 +10,18 @@
     <script src="blockly/blocks_compressed.js"></script>
     <!-- <script src="blockly/arduino_compressed.js"></script> -->
     <!-- <script src="blockly/blockly_uncompressed.js"></script> -->
-    <!-- <script src="blockly/blocks/logic.js"></script>
+    
+    <!-- 
+    <script src="blockly/blocks/logic.js"></script>
     <script src="blockly/blocks/loops.js"></script>
     <script src="blockly/blocks/math.js"></script>
     <script src="blockly/blocks/text.js"></script>
     <script src="blockly/blocks/lists.js"></script>
     <script src="blockly/blocks/colour.js"></script>
     <script src="blockly/blocks/variables.js"></script>
-    <script src="blockly/blocks/procedures.js"></script> -->
+    <script src="blockly/blocks/procedures.js"></script>
+     -->
+
     <script src="blockly/blocks/arduino/io.js"></script>
     <script src="blockly/blocks/arduino/map.js"></script>
     <script src="blockly/blocks/arduino/procedures.js"></script>
