link index with xml

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -1016,7 +1016,7 @@ Sine wave instrument
     </value>
   </block>
 </category>
-
+@@include('NeoGen.xml');
     </xml>
   
   <div class="modal" id="NeoBlock-setting">
