remove chip padding

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -248,8 +248,8 @@
                   <div class="head">
             <h5 class="text-primary">Chip Reference</h5>
         </div>
-                 <div id="chipview" style="padding: 20px">
-        <img src="assets/ATtiny85-pins.jpg"
+                 <div id="chipview" style="padding: 0px">
+        <img src="assets/ATtiny85-pins.png"
           class="img-responsive center-block">
         </div>
 
