--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -50,8 +50,8 @@
     <script src="blockly/generators/arduino/tone.js"></script>
     <script src="blockly/generators/arduino/variables.js"></script>
 
-<!--     <script src="cocojs/NeoBlock/NeoBlock.js"></script>
-    <script src="cocojs/NeoBlock/cocogen.js"></script>
+<!--     <script src="neosrc/NeoBlock/NeoBlock.js"></script>
+    <script src="neosrc/NeoBlock/NeoGen.js"></script>
  -->
     <!-- Default language js files, user selection appended to head
     on load -->
@@ -76,7 +76,7 @@
 
     <script type="text/javascript" src="cocojs/toolbox.js"></script>
     <script type="text/javascript" src="cocojs/cocoupdater.js"></script>
-    <script type="text/javascript" src="cocojs/coco.js"></script>
+    <script type="text/javascript" src="neosrc/neo.js"></script>
 
   </head><body class="simulator">
     <div id="wrapper">
