--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -74,8 +74,8 @@
     <script type="text/javascript" src="vendor/clike.min.js"></script>
     <script type="text/javascript" src="vendor/split.min.js"></script>
 
-    <script type="text/javascript" src="cocojs/toolbox.js"></script>
-    <script type="text/javascript" src="cocojs/cocoupdater.js"></script>
+    <script type="text/javascript" src="neosrc/toolbox.js"></script>
+    <script type="text/javascript" src="neosrc/cocoupdater.js"></script>
     <script type="text/javascript" src="neosrc/neo.js"></script>
 
   </head><body class="simulator">
