add toolbox and updater

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -73,7 +73,8 @@
     <script type="text/javascript" src="vendor/split.min.js"></script>
     <!-- <script type="text/javascript" src="vendor/socket.io-1.4.5.js"></script> -->
 
-
+    <script type="text/javascript" src="neosrc/toolbox.js"></script>
+    <script type="text/javascript" src="neosrc/cocoupdater.js"></script>
     <script type="text/javascript" src="neosrc/neo.js"></script>
   </head><body class="simulator">
     <div id="wrapper">
