add custom code pane

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -154,6 +154,11 @@
                     <input type="radio" name="edit-mode" value="Code" autocomplete="off">
                     <span>Code</span>
                   </label>
+                  <label id="btn-mode-customcode" class="btn btn-default navbar-btn">
+                    <input type="radio" name="edit-mode" value="Code" autocomplete="off">
+                    <span>Custom Code</span>
+                  </label>
+                  
                   <label style="display: none" id="btn-mode-xml" class="btn btn-default navbar-btn">
                     <input type="radio" name="edit-mode" value="XML" autocomplete="off">
                     <span>XML</span>
@@ -236,6 +241,9 @@
               <div class="tab-pane" id="pane-code">
                 <textarea id="codeDiv"></textarea>
               </div>
+              <div class="tab-pane" id="pane-custom-code">
+                <textarea id="customCodeDiv"></textarea>
+              </div>              
               <div class="tab-pane" id="pane-xml">
                 <textarea id="xmlCodeDiv"></textarea>
               </div>
